--- a/Develop/githubuser.html
+++ b/Develop/githubuser.html
@@ -8,12 +8,57 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-          <link rel="stylesheet" href="style.css">
           <title>GitHub Profile Generator</title>
+          <style>
+          @page {
+            margin: 0;
+          }
+         *,
+         *::after,
+         *::before {
+         box-sizing: border-box;
+         }
+         html, body {
+            background: #EEBCC0;
+        }
+        img {
+          margin-top:2%;
+      }
+        a {
+            color: white;
+        }
+        .topColor {
+          color: #EEBCC0;
+        }
+        .bio-container {
+            height: 50pt;
+        }
+        .three-links {
+            margin-top: 3%;
+            margin-bottom: 3%;
+        }
+        h4 {
+            font-size: medium;
+            color: cornflowerblue;
+            padding-top: 3%;
+        }
+        h5 {
+            font-size: medium;
+            font-weight: 200;
+        }
+        .stats {
+            margin-top: 1%;
+            margin-right: 1%;
+            margin-bottom: 1%;
+            margin-left: 1%;
+            border-radius: 25px;
+            padding: 10px;
+        }
+        </style>
       </head>
       
       <body>
-        <div class="container-fluid bg-dark text-light text-center">
+        <div class="container-fluid text-light text-center top">
           <img src=https://avatars3.githubusercontent.com/u/57048799?s=400&v=4 class="rounded-circle" alt="Profile Image" width="300" height="300">
           <h1>Alexita</h1>
           <h3>alexahanthony</h3>
@@ -47,7 +92,7 @@
           <h5>Public Repositories: 9</h5>
           </div>
       <div class="col-3 bg-dark text-white stats">
-          <h5>Followers: 0</h5>
+          <h5>Followers: 1</h5>
           </div>
       <div class="col-3"></div>
       </div>
