--- a/Develop/githubuser.html
+++ b/Develop/githubuser.html
@@ -19,7 +19,7 @@
          box-sizing: border-box;
          }
          html, body {
-            background: #EEBCC0;
+            background: #5F64D3;
         }
         img {
           margin-top:2%;
@@ -28,7 +28,7 @@
             color: white;
         }
         .topColor {
-          color: #EEBCC0;
+          color: #5F64D3;
         }
         .bio-container {
             height: 50pt;
