--- a/Develop/githubuser.html
+++ b/Develop/githubuser.html
@@ -19,7 +19,7 @@
          box-sizing: border-box;
          }
          html, body {
-            background: #5F64D3;
+            background: #383331;
         }
         img {
           margin-top:2%;
@@ -28,7 +28,7 @@
             color: white;
         }
         .topColor {
-          color: #5F64D3;
+          color: #383331;
         }
         .bio-container {
             height: 50pt;
@@ -59,23 +59,23 @@
       
       <body>
         <div class="container-fluid text-light text-center top">
-          <img src=https://avatars3.githubusercontent.com/u/57048799?s=400&v=4 class="rounded-circle" alt="Profile Image" width="300" height="300">
-          <h1>Alexita</h1>
-          <h3>alexahanthony</h3>
+          <img src=https://avatars2.githubusercontent.com/u/46640371?s=400&v=4 class="rounded-circle" alt="Profile Image" width="300" height="300">
+          <h1>Adam Sabet</h1>
+          <h3>ajrsabet</h3>
           <div class="three-links">
           <div class="row">
       <div class="col-3"></div>
       <div class="col-2">
         <p><i class="fas fa-location-arrow"></i>
-        <a href="https://www.google.com/maps/place/Bellevue%2C%20WA">Bellevue, WA</a></p>
+        <a href="https://www.google.com/maps/place/"></a></p>
       </div>
       <div class="col-2">
       <p><i class="fab fa-github"></i>
-        <a href="https:/github.com/alexahanthony">GitHub Profile</a></p>
+        <a href="https:/github.com/ajrsabet">GitHub Profile</a></p>
       </div>
       <div class="col-2">
       <p><i class="fas fa-file-alt"></i>
-        <a href="https://github.blog/author/alexahanthony/">GitHub Blog</a></p>
+        <a href="https://github.blog/author/ajrsabet/">GitHub Blog</a></p>
       </div>
       <div class="col-3"></div>
       </div>
@@ -83,16 +83,16 @@
   </div>
   </div>
         <div class="container-fluid bg-white text-center bio-container">
-          <h4>I like to make stuff.</h4>
+          <h4></h4>
         </div>
         <div class="container-fluid bg-white text-center">
         <div class="row">
       <div class="col-3"></div>
       <div class="col-3 bg-dark text-white stats">
-          <h5>Public Repositories: 9</h5>
+          <h5>Public Repositories: 10</h5>
           </div>
       <div class="col-3 bg-dark text-white stats">
-          <h5>Followers: 1</h5>
+          <h5>Followers: 2</h5>
           </div>
       <div class="col-3"></div>
       </div>
@@ -102,7 +102,7 @@
           <h5>Github Stars: 0</h5>
           </div>
       <div class="col-3 bg-dark text-white stats">
-          <h5>Following: 1</h5>
+          <h5>Following: 6</h5>
           </div>
       <div class="col-3"></div>
       </div>
